--- a/package.json
+++ b/package.json
@@ -1,44 +1,26 @@
 {
-  "name": "hoist",
-  "version": "0.1.0",
+  "name": "create-t3-turbo",
   "private": true,
+  "packageManager": "pnpm@7.13.0",
   "scripts": {
-    "build": "next build",
-    "dev": "next dev",
-    "postinstall": "prisma generate",
-    "lint": "next lint",
-    "start": "next start"
+    "build": "turbo build",
+    "clean": "rm -rf node_modules",
+    "clean:workspaces": "turbo clean",
+    "db-generate": "turbo db-generate",
+    "db-push": "turbo db-push",
+    "dev": "turbo dev --parallel",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "lint": "turbo lint && manypkg check",
+    "type-check": "turbo type-check"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.4",
-    "@prisma/client": "^4.1.0",
-    "@tanstack/react-query": "^4.2.3",
-    "@trpc/client": "10.0.0-proxy-alpha.70",
-    "@trpc/next": "10.0.0-proxy-alpha.70",
-    "@trpc/react": "10.0.0-proxy-alpha.70",
-    "@trpc/server": "10.0.0-proxy-alpha.70",
-    "next": "12.2.5",
-    "next-auth": "^4.10.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "superjson": "^1.9.1",
-    "zod": "^3.18.0"
-  },
-  "devDependencies": {
-    "@types/node": "18.0.0",
-    "@types/react": "18.0.14",
-    "@types/react-dom": "18.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
-    "autoprefixer": "^10.4.7",
-    "eslint": "8.22.0",
-    "eslint-config-next": "12.2.5",
-    "postcss": "^8.4.14",
-    "prisma": "^4.1.0",
-    "tailwindcss": "^3.1.6",
-    "typescript": "4.7.4"
-  },
-  "ct3aMetadata": {
-    "initVersion": "6.0.0-next.049c840"
+    "@manypkg/cli": "^0.19.2",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
+    "eslint": "^8.28.0",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "turbo": "^1.5.5",
+    "typescript": "^4.9.3"
   }
 }
